<resources>
    <string name="app_name">Module1</string>
    <string name="field_1">Number 1</string>
    <string name="field_2">Number 2</string>
    <string name="operation_1">Plus</string>
    <string name="operation_2">Minus</string>
    <string name="operation_3">Divide</string>
    <string name="operation_4">Multiple</string>
    <string name="float_values">Use float numbers</string>
    <string name="signed_values">Use signed numbers</string>
    <string name="result_field">Result</string>
    <string name="calculate_button">Calculate</string>
    <string name="operation_not_found_message">Please, choose an operation</string>
    <string name="clear">Clear all</string>
    <string name="arithmeticException">It is impossible to divide by zero</string>
</resources>
