<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBeige"
    tools:context=".MainActivity">

    <android.support.constraint.Guideline
        android:id="@+id/guidelineLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <android.support.constraint.Guideline
        android:id="@+id/guidelineRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />

    <EditText
        android:id="@+id/field1"
        style="@style/MyEditText"
        android:hint="@string/field_1"
        app:layout_constraintBottom_toTopOf="@id/field2"
        app:layout_constraintEnd_toStartOf="@id/guidelineRight"
        app:layout_constraintStart_toStartOf="@id/guidelineLeft"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <EditText
        android:id="@+id/field2"
        style="@style/MyEditText"
        android:hint="@string/field_2"
        app:layout_constraintBottom_toTopOf="@id/guideline3"
        app:layout_constraintEnd_toStartOf="@id/guidelineRight"
        app:layout_constraintStart_toStartOf="@id/guidelineLeft"
        app:layout_constraintTop_toBottomOf="@id/field1" />

    <RadioGroup
        android:id="@+id/operations"
        style="@style/MyRadioGroup"
        app:layout_constraintBottom_toTopOf="@id/operations2"
        app:layout_constraintEnd_toStartOf="@id/guidelineRight"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@id/guidelineLeft"
        app:layout_constraintTop_toBottomOf="@id/guideline3"
        app:layout_constraintVertical_chainStyle="packed">

        <RadioButton
            android:id="@+id/plus"
            style="@style/MyRadioButton"
            android:text="@string/operation_1"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="153dp" />

        <RadioButton
            android:id="@+id/minus"
            style="@style/MyRadioButton"
            android:text="@string/operation_2"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="198dp" />
    </RadioGroup>

    <RadioGroup
        android:id="@+id/operations2"
        style="@style/MyRadioGroup"
        app:layout_constraintBottom_toTopOf="@id/guideline4"
        app:layout_constraintEnd_toStartOf="@id/guidelineRight"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@id/guidelineLeft"
        app:layout_constraintTop_toBottomOf="@id/operations"
        app:layout_constraintVertical_bias="0.0">

        <RadioButton
            android:id="@+id/multiple"
            style="@style/MyRadioButton"
            android:text="@string/operation_4" />

        <RadioButton
            android:id="@+id/divide"
            style="@style/MyRadioButton"
            android:text="@string/operation_3" />
    </RadioGroup>

    <CheckBox
        android:id="@+id/floatValues"
        style="@style/MyCheckBox"
        android:text="@string/float_values"
        android:onClick="checkFloatClicked"
        app:layout_constraintBottom_toTopOf="@id/signedValues"
        app:layout_constraintEnd_toStartOf="@id/guidelineRight"
        app:layout_constraintStart_toStartOf="@id/guidelineLeft"
        app:layout_constraintTop_toBottomOf="@id/guideline4" />

    <CheckBox
        android:id="@+id/signedValues"
        style="@style/MyCheckBox"
        android:text="@string/signed_values"
        android:onClick="checkSignedClicked"
        app:layout_constraintBottom_toTopOf="@id/resultField"
        app:layout_constraintEnd_toStartOf="@id/guidelineRight"
        app:layout_constraintStart_toStartOf="@id/guidelineLeft"
        app:layout_constraintTop_toBottomOf="@id/floatValues" />

    <TextView
        android:id="@+id/resultField"
        style="@style/MyTextView"
        app:layout_constraintBottom_toTopOf="@id/calculateButton"
        app:layout_constraintEnd_toStartOf="@id/guidelineRight"
        app:layout_constraintStart_toStartOf="@id/guidelineLeft"
        app:layout_constraintTop_toBottomOf="@id/signedValues" />

    <Button
        android:id="@+id/calculateButton"
        style="@style/MyButton"
        android:onClick="calculate"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/guidelineRight"
        app:layout_constraintStart_toStartOf="@id/guidelineLeft"
        app:layout_constraintTop_toBottomOf="@id/resultField" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.6" />

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/MyToolBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>